Clean up task headings and tweak task styling to avoid overlaps
https://unisubs.sifterapp.com/issue/536
https://unisubs.sifterapp.com/issue/628

--- a/media/less/v1.less
+++ b/media/less/v1.less
@@ -713,7 +713,7 @@ body {
 }
 .v1 .listing.tasks > li {
     padding-left: 110px;
-    min-height: 5em;
+    min-height: 6.5em;
 
     .done {
         span {
